// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Format js-in-vue with prettier-plugin-oxfmt > should format .vue w/ sort-imports 1`] = `
"<script lang="ts">
  import a from "a";
  import m from "m";
  import z from "z";
</script>
<script lang="ts" setup>
  import a from "a";
  import m from "m";
  import z from "z";
</script>
<template>
  <div>{{ a + m + z }}</div>
</template>
"
`;

exports[`Format js-in-vue with prettier-plugin-oxfmt > should format .vue w/ sort-tailwindcss 1`] = `
"<script setup>
  import clsx from "clsx";
  import { ref } from "vue";

  const count = ref(0);
  const cls = clsx("flex p-4");
</script>
<template>
  <div class="flex p-4">{{ count }}</div>
  <div class="flex p-4">{{ count }}</div>
</template>
"
`;

exports[`Format js-in-vue with prettier-plugin-oxfmt > should format script blocks in staged internal vue mode 1`] = `
"
<script lang="ts" setup>
  import a from "a";
  import z from "z";
  const answer = 1;
</script>
<template>
  <div>{{ answer }}</div>
</template>
"
`;

exports[`Format js-in-vue with prettier-plugin-oxfmt > should format template-only vue files in staged internal mode 1`] = `
"<template>
  <Comp :label="\`\${foo}\`">{{ msg }}</Comp>
</template>
"
`;
